--- a/src/style.css
+++ b/src/style.css
@@ -818,6 +818,10 @@ main {
   grid-gap: 1rem;
 }
 
+.landing-list ul h2 {
+  text-align: left;
+}
+
 .landing-list ul li a {
   -webkit-box-shadow: 0 0 1rem black;
           box-shadow: 0 0 1rem black;
@@ -914,6 +918,7 @@ img {
         grid-template-rows: 8rem 1fr;
   }
   header {
+    background-color: red;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1 / 3;
@@ -1048,8 +1053,14 @@ body {
   line-height: 1.5;
 }
 
+div #root, div .App {
+  height: 100vh;
+  width: 100vw;
+}
+
 /* HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER */
 header {
+  margin-bottom: 1rem;
   outline: 1rem solid var(--color-dark);
   display: -webkit-box;
   display: -ms-flexbox;
