--- a/src/style.scss
+++ b/src/style.scss
@@ -72,7 +72,7 @@ div #root, div .App {
 
 header {
   margin-bottom: 1rem;
-  outline: 1rem solid var(--color-dark);
+  // outline: 1rem solid var(--color-dark);
 
   display: flex;
   align-items: center;
