--- a/src/style.css
+++ b/src/style.css
@@ -453,7 +453,7 @@ main {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background: var(--color-yellow) url("../images/layered-waves-haikei.svg") no-repeat bottom center;
+  background: var(--color-yellow) url("../public/images/layered-waves-haikei.svg") no-repeat bottom center;
   background-size: cover;
   text-align: center;
 }
@@ -802,7 +802,7 @@ main {
 
 .landing__banner {
   padding: 2rem;
-  background: var(--color-blood) url(../images/stacked-waves-haikei.svg) no-repeat center center;
+  background: var(--color-blood) url(../public/images/stacked-waves-haikei.svg) no-repeat center center;
   background-size: cover;
   color: var(--color-white);
 }
@@ -857,38 +857,6 @@ main {
   background: var(--bg-pos);
 }
 
-.landing-list__hypnus {
-  background: var(--bg-pos) url(../images/hypnus.jpg);
-}
-
-.landing-list__kabalion {
-  background: var(--bg-pos) url(../images/kabalion.jpg);
-}
-
-.landing-list__aedi {
-  background: var(--bg-pos) url(../images/aedi.jpg);
-}
-
-.landing-list__the-memoir {
-  background: var(--bg-pos) url(../images/thememoir.jpg);
-}
-
-.landing-list__aether-mechanics {
-  background: var(--bg-pos) url(../images/aethermechanics.jpg);
-}
-
-.landing-list__ntogn {
-  background: var(--bg-pos) url(../images/ntogn.jpg);
-}
-
-.landing-list__slink {
-  background: var(--bg-pos) url(../images/slink.jpg);
-}
-
-.landing-list__photography {
-  background: var(--bg-pos) url(../images/photography.jpg);
-}
-
 /* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES  */
 img {
   border: 0;
@@ -898,7 +866,7 @@ img {
 .michel {
   width: 100%;
   height: 36rem;
-  background-image: url("../images/michel.jpg");
+  background-image: url("../public/images/michel.jpg");
   background-position: center left 8rem;
   background-repeat: no-repeat;
   background-size: cover;
