--- a/src/style.scss
+++ b/src/style.scss
@@ -63,7 +63,7 @@ body {
 // Cntainers added through React.
 // Took some debugging to find why media queries were behaving weirdly!
 
-div #root, div .App {
+#root {
   height: 100vh;
   width: 100vw;
 }
