Restructured files and folders.

--- a/src/styles/_blog-style.scss
+++ b/src/styles/_blog-style.scss
@@ -17,7 +17,7 @@
 
   background: 
     var(--color-yellow) 
-    url("../public/images/layered-waves-haikei.svg")
+    url("../../public/images/svg/layered-waves-haikei.svg")
     no-repeat 
     bottom 
     center;
