Fixed outline issue on header.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1029,6 +1029,7 @@ body {
 /* HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER */
 header {
   margin-bottom: 1rem;
+  outline: 1rem solid var(--color-dark);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
