--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -72,7 +72,7 @@ body {
 
 header {
   margin-bottom: 1rem;
-  // outline: 1rem solid var(--color-dark);
+  outline: 1rem solid var(--color-dark);
 
   display: flex;
   align-items: center;
