Added missing font on blog page.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,6 +6,7 @@ $font-dragon: "UnifrakturMaguntia", "Times New Roman", serif;
 @import "_blog-style";
 @import "_home-style";
 @import "_svg-style";
+@import url('https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap');
 
 :root {
   /* Global Sizes */
