--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -65,6 +65,7 @@ body {
 // Took some debugging to find why media queries were behaving weirdly!
 
 #root {
+  background-color: #1e1e1e;
   height: 100vh;
   width: 100vw;
 }
@@ -119,12 +120,12 @@ footer {
   justify-content: center;
   z-index: 1;
 
-  background-color: var(--color-dark); 
+  background-color: var(--color-grey); 
   box-shadow: 0 4px .5rem #1e1e1e;
   min-width: 16.75rem;
 
-  color: var(--color-white);
   font-size: var(--h5);
+
 
   transition: background-color var(--speed-slow) ease-out, border-radius var(--speed-slow);
   
@@ -137,7 +138,7 @@ footer {
   a:visited {
     padding: 2rem;
 
-    color: var(--color-white);
+    color: var(--color-dark);
     text-decoration: none;
 
     &:hover {
@@ -205,7 +206,7 @@ p {
     bottom: 2rem;
     left: 2rem;
 
-    border: 0.5rem solid var(--color-grey);
+    border: 0.5rem solid var(--color-dark);
 
     font-size: var(--base-font-size);
 
