--- a/src/styles/_blog-style.scss
+++ b/src/styles/_blog-style.scss
@@ -54,7 +54,7 @@
   article {
     div {  /* Thumbnail Wrapper */
       display: flex;
-      align-items: center;
+      align-items: left;
 
       background-color: var(--color-blood);
     }
@@ -66,22 +66,30 @@
       height: 100%;
       width: 100%;
 
-      display: grid;
+      display: flex;
       align-items: stretch;
 
       transition: transform var(--speed-fast) ease-out, outline var(--speed-slow) ease;
 
       text-decoration: none;
 
+      div { 
+        width: 100vw;
+
+        display: flex;
+        flex-direction: column;
+      }
+
       &:focus,
       &:hover { 
         background-color: var(--color-blood);
-        box-shadow: 0 0 5rem var(--color-dark);
-        outline: 1rem solid var(--color-blood);
-        transform: scale(1.03);  
+        border-radius: 1rem;
+        transform: translateX(1rem);
         z-index: 1;
 
-        transition: transform var(--speed-fast) ease-out, outline var(--speed-fast) ease-out;
+        transition: transform var(--speed-fast) ease-out, 
+          border-radius var(-speed-slow) ease-out,
+          outline var(--speed-fast) ease-out;
       }
     }
     
@@ -117,37 +125,11 @@ aside {
 
 /* MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES */
 
-@media screen and (min-width: 300px) {
-
-  /* Banner */
-
-  .blog__banner {
-    min-height: calc(52vh - 8rem);
-  }
-}
-
 @media  screen and (min-width: 30rem) {
 
   /* Thumbnails */
 
-  .blog__thumbnails article a {
-    grid-template-columns: 1fr 2fr;
-
-    article {
-      img {
-        display: block;
-        grid-column: 1 / 2;
-      }
-      
-      h2 {
-        grid-column: 2 / 3;
-      }
-
-      p {
-        grid-column: 1 / 3;
-      }
-    }
-  }
+    h2 { font-size: 1.5rem; }
 }
 
 @media screen and (min-width: 40rem) {
@@ -172,7 +154,7 @@ aside {
 
       img {
         display: block;
-
+        max-width: 100px;
         grid-row: 2 / 3;
       }
 
@@ -277,45 +259,5 @@ aside {
   #since-born {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
-  }
-}
-
-@media screen and (min-width: 100rem) {
-  main {
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  // .blog__banner {
-  //   height: calc(100vh - 9rem);
-  // }
-
-  .blog__thumbnails {
-    grid-column: 2 / 4;
-    grid-row: 1 / 3;
-
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-
-    article {
-      height: 100%; 
-
-      a { height: 100%; }
-      img { grid-row: 2; }
-      div { grid-column: 1 / 3; }
-      p {
-        grid-column: 2 / 3;
-        height: 100%;
-      }
-    }
-  }
-
-  aside {
-    grid-column: 2;
-    grid-row: 3;
-  }
-
-  #since-born {
-    grid-column: 3;
-    grid-row: 3;
   }
 }
