--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -492,9 +492,9 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
   background-color: var(--color-blood);
 }
 
@@ -505,8 +505,9 @@ main {
   outline: 1rem solid var(--color-dark);
   height: 100%;
   width: 100%;
-  display: -ms-grid;
-  display: grid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
@@ -517,18 +518,27 @@ main {
   text-decoration: none;
 }
 
+.blog__thumbnails article a div {
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .blog__thumbnails article a:focus, .blog__thumbnails article a:hover {
   background-color: var(--color-blood);
-  -webkit-box-shadow: 0 0 5rem var(--color-dark);
-          box-shadow: 0 0 5rem var(--color-dark);
-  outline: 1rem solid var(--color-blood);
-  -webkit-transform: scale(1.03);
-          transform: scale(1.03);
+  border-radius: 1rem;
+  -webkit-transform: translateX(1rem);
+          transform: translateX(1rem);
   z-index: 1;
-  -webkit-transition: outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
-  transition: outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
-  transition: transform var(--speed-fast) ease-out, outline var(--speed-fast) ease-out;
-  transition: transform var(--speed-fast) ease-out, outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
+  -webkit-transition: border-radius var(-speed-slow) ease-out, outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
+  transition: border-radius var(-speed-slow) ease-out, outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
+  transition: transform var(--speed-fast) ease-out, border-radius var(-speed-slow) ease-out, outline var(--speed-fast) ease-out;
+  transition: transform var(--speed-fast) ease-out, border-radius var(-speed-slow) ease-out, outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
 }
 
 .blog__thumbnails article img {
@@ -558,34 +568,10 @@ aside {
 }
 
 /* MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES */
-@media screen and (min-width: 300px) {
-  /* Banner */
-  .blog__banner {
-    min-height: calc(52vh - 8rem);
-  }
-}
-
 @media screen and (min-width: 30rem) {
   /* Thumbnails */
-  .blog__thumbnails article a {
-    -ms-grid-columns: 1fr 2fr;
-        grid-template-columns: 1fr 2fr;
-  }
-  .blog__thumbnails article a article img {
-    display: block;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
-  }
-  .blog__thumbnails article a article h2 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2 / 3;
-  }
-  .blog__thumbnails article a article p {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1 / 3;
+  h2 {
+    font-size: 1.5rem;
   }
 }
 
@@ -604,6 +590,7 @@ aside {
   }
   .blog__thumbnails article img {
     display: block;
+    max-width: 100px;
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
     grid-row: 2 / 3;
@@ -737,58 +724,6 @@ aside {
     -ms-grid-column: 2;
     -ms-grid-column-span: 1;
     grid-column: 2 / 3;
-  }
-}
-
-@media screen and (min-width: 100rem) {
-  main {
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-  }
-  .blog__thumbnails {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
-    grid-column: 2 / 4;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 2;
-    grid-row: 1 / 3;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-  }
-  .blog__thumbnails article {
-    height: 100%;
-  }
-  .blog__thumbnails article a {
-    height: 100%;
-  }
-  .blog__thumbnails article img {
-    -ms-grid-row: 2;
-    grid-row: 2;
-  }
-  .blog__thumbnails article div {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1 / 3;
-  }
-  .blog__thumbnails article p {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2 / 3;
-    height: 100%;
-  }
-  aside {
-    -ms-grid-column: 2;
-    grid-column: 2;
-    -ms-grid-row: 3;
-    grid-row: 3;
-  }
-  #since-born {
-    -ms-grid-column: 3;
-    grid-column: 3;
-    -ms-grid-row: 3;
-    grid-row: 3;
   }
 }
 
@@ -1159,8 +1094,14 @@ p:first-child {
   line-height: 1em;
 }
 
+.hover {
+  border-radius: 1rem;
+  -webkit-transition: border-radius var(--speed-fast) ease-out;
+  transition: border-radius var(--speed-fast) ease-out;
+}
+
 /* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
-@media screen and (max-width: 27rem) {
+@media screen and (max-width: 30rem) {
   :root {
     --base-font-size: 1rem;
   }
