--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -189,9 +189,14 @@ p {
   line-height: 1em;
 }
 
+.hover {
+  border-radius: 1rem;
+  transition: border-radius var(--speed-fast) ease-out;
+}
+
 /* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
 
-@media screen and (max-width: 27rem) {
+@media screen and (max-width: 30rem) {
   :root {
     --base-font-size: 1rem; 
   }
