--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -518,27 +518,16 @@ main {
   text-decoration: none;
 }
 
-.blog__thumbnails article a div {
-  width: 100vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
 .blog__thumbnails article a:focus, .blog__thumbnails article a:hover {
   background-color: var(--color-blood);
   border-radius: 1rem;
-  -webkit-transform: translateX(1rem);
-          transform: translateX(1rem);
+  -webkit-transform: translateX(2.5rem);
+          transform: translateX(2.5rem);
   z-index: 1;
-  -webkit-transition: border-radius var(-speed-slow) ease-out, outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
-  transition: border-radius var(-speed-slow) ease-out, outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
-  transition: transform var(--speed-fast) ease-out, border-radius var(-speed-slow) ease-out, outline var(--speed-fast) ease-out;
-  transition: transform var(--speed-fast) ease-out, border-radius var(-speed-slow) ease-out, outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
+  -webkit-transition: outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
+  transition: outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
+  transition: transform var(--speed-fast) ease-out, outline var(--speed-fast) ease-out;
+  transition: transform var(--speed-fast) ease-out, outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
 }
 
 .blog__thumbnails article img {
@@ -769,11 +758,10 @@ main {
   transition: transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65), border-radius 0.2s 0.4s ease, -webkit-transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65);
 }
 
-.landing-list ul li a:focus,
-.landing-list ul li a:hover {
+.landing-list ul li a:focus, .landing-list ul li a:hover {
   border-radius: 1rem 0 0 1rem;
-  -webkit-transform: translateX(2.5em);
-          transform: translateX(2.5em);
+  -webkit-transform: translateX(1.5em);
+          transform: translateX(1.5em);
   -webkit-transition: border-radius 0.2s, -webkit-transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93);
   transition: border-radius 0.2s, -webkit-transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93);
   transition: transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93), border-radius 0.2s;
@@ -1101,7 +1089,7 @@ p:first-child {
 }
 
 /* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
-@media screen and (max-width: 30rem) {
+@media screen and (max-width: 40rem) {
   :root {
     --base-font-size: 1rem;
   }
