--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -407,6 +407,10 @@ button:active {
   color: var(--color-dark);
 }
 
+body.dark-mode section.landing-list ul li a {
+  outline: 4px solid var(--color-dark);
+}
+
 /* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
 @media all and (max-width: 1023px) {
   .blog__post img {
