--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -574,7 +574,7 @@ aside {
     max-width: 55rem;
   }
   .blog__banner {
-    min-height: 100vh;
+    min-height: 32vh;
   }
   /* Thumbnails */
   .blog__thumbnails article a {
@@ -608,6 +608,9 @@ aside {
 }
 
 @media screen and (min-width: 50rem) {
+  .blog__banner {
+    min-height: calc(100vh - 7.5em);
+  }
   .blog__thumbnails article img {
     -ms-grid-row: 1;
     -ms-grid-row-span: 2;
@@ -654,8 +657,6 @@ aside {
     -ms-grid-columns: 38.2% 1fr;
         grid-template-columns: 38.2% 1fr;
     /* 38.2% = Golden Ratio */
-    -ms-grid-rows: auto;
-        grid-template-rows: auto;
   }
   .blog__banner {
     border-bottom: none;
@@ -663,8 +664,8 @@ aside {
     -ms-grid-column-span: 1;
     grid-column: 1 / 2;
     -ms-grid-row: 1;
-    -ms-grid-row-span: 5;
-    grid-row: 1 / 6;
+    -ms-grid-row-span: 4;
+    grid-row: 1 / 5;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
@@ -678,8 +679,8 @@ aside {
     -ms-grid-column-span: 1;
     grid-column: 2 / 3;
     -ms-grid-row: 2;
-    -ms-grid-row-span: 3;
-    grid-row: 2 / 5;
+    -ms-grid-row-span: 4;
+    grid-row: 2 / 6;
     z-index: 1;
   }
   .blog__thumbnails article img {
@@ -703,20 +704,6 @@ aside {
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
     grid-row: 2 / 3;
-  }
-  aside {
-    -ms-grid-column: 2;
-    grid-column: 2;
-    -ms-grid-row: 5;
-    grid-row: 5;
-  }
-  #since-born {
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1 / 2;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2 / 3;
   }
 }
 
