--- a/src/styles/_blog-style.scss
+++ b/src/styles/_blog-style.scss
@@ -17,7 +17,7 @@
 
   background: 
     var(--color-yellow) 
-    url("../../public/images/svg/layered-waves-haikei.svg")
+    url('../../public/images/svg/layered-waves-haikei.svg')
     no-repeat 
     bottom 
     center;
@@ -135,67 +135,12 @@ aside {
   .blog__banner {
     min-height: 32vh;
   }
-
-  /* Thumbnails */
-
-  .blog__thumbnails {
-    article {
-      a {
-        grid-template-columns: 1fr 2fr;
-      }
-
-      img {
-        display: block;
-        max-width: 100px;
-        grid-row: 2 / 3;
-      }
-
-      div {
-        grid-column: span 2;
-        grid-row: 1 / 2;
-      }
-
-      h2 {
-        font-size: calc(var(--h3));
-      }
-
-      p {
-        grid-column: 2 / 3;
-        grid-row: 2 / 3;
-      }
-    }
-  }
-}
-
-@media screen and (min-width: 50rem) {
-
-  .blog__banner {
-    min-height: calc(100vh - 7.5em);
-  }
-
-  .blog__thumbnails {
-    article {
-      img {
-        grid-row: 1 / 3;
-      }
-
-      div {
-        grid-column: 2 / 3;
-        grid-row: 1 / 2;
-      }
-
-      p {
-        grid-column: 2 / 3;
-        grid-row: 2 / 3;
-      }
-    }
-  }
 }
 
 @media screen and (min-width: 64rem) {
-  body {
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 8rem 1fr;
+
+  .blog__banner {
+    min-height: calc(100vh - 7.5em);
   }
 
   header {
@@ -209,7 +154,6 @@ aside {
     display: grid;
     grid-gap: 1rem;
     grid-template-columns: 38.2% 1fr; /* 38.2% = Golden Ratio */
-    // grid-template-rows: auto;
   }
 
   .blog__banner {
@@ -220,30 +164,5 @@ aside {
     justify-content: flex-start;
     align-items: flex-start;
     text-align: left;
-  }
-
-  .blog__thumbnails {
-    grid-column: 2 / 3;
-    grid-row: 2 / 6;
-
-    z-index: 1;
-
-    article {
-      img {
-        display: block;
-
-        grid-row: 1 / 3;
-      }
-
-      div {
-        grid-column: 2 / 3;
-        grid-row: 1 / 2;
-      }
-
-      p {
-        grid-column: 2 / 3;
-        grid-row: 2 / 3;
-      }
-    }
   }
 }
