--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -659,6 +659,11 @@ main {
   transition: transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65), border-radius 0.2s 0.4s ease, -webkit-transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65);
 }
 
+.landing-list ul li a[target$="_blank"]::after {
+  content: " " url("/public/images/svg/open_in_new_black_24dp.svg");
+  vertical-align: middle;
+}
+
 .landing-list ul li a:focus, .landing-list ul li a:hover {
   border-radius: 1rem 0 0 1rem;
   -webkit-transform: translateX(1.5em);
@@ -935,11 +940,6 @@ a {
   text-decoration: underline;
   -webkit-transition: color var(--speed-fast);
   transition: color var(--speed-fast);
-}
-
-a[target$="_blank"]::after {
-  content: " " url("/public/images/svg/open_in_new_black_24dp.svg");
-  vertical-align: middle;
 }
 
 a:focus, a:hover {
