--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -652,6 +652,11 @@ main {
 }
 
 /* LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST */
+.landing-list > h1 {
+  color: #e4e4e4;
+  padding: .25rem 1.5rem;
+}
+
 .landing-list ul {
   display: -ms-grid;
   display: grid;
