--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -24,9 +24,13 @@ main {
 /* LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST */
 
 .landing-list {
-  & > h1 { 
+  section {
+    // background-color: red;
+    transform: translateY(-7rem);
+  }
+  h1 { 
     color: rgb(228, 228, 228);
-    padding: .25rem 1.5rem;
+    padding: .25rem 1.5rem 0rem 1.5rem;
   }
 
   ul {
