--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -652,9 +652,14 @@ main {
 }
 
 /* LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST */
-.landing-list > h1 {
+.landing-list section {
+  -webkit-transform: translateY(-7rem);
+          transform: translateY(-7rem);
+}
+
+.landing-list h1 {
   color: #e4e4e4;
-  padding: .25rem 1.5rem;
+  padding: .25rem 1.5rem 0rem 1.5rem;
 }
 
 .landing-list ul {
