--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -55,10 +55,10 @@ main {
         transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65),
         border-radius 0.2s 0.4s ease;
 
-        &[target$="_blank"]::after {
-          content: " " url('/public/images/svg/open_in_new_black_24dp.svg');
-          vertical-align: middle;
-        }
+        // &[target$="_blank"]::after {
+        //   content: " " url('/public/images/svg/open_in_new_black_24dp.svg');
+        //   vertical-align: middle;
+        // }
         &:focus,
         &:hover {
         border-radius: 1rem 0 0 1rem;
