--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -652,11 +652,6 @@ main {
 }
 
 /* LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST */
-.landing-list section {
-  -webkit-transform: translateY(-7rem);
-          transform: translateY(-7rem);
-}
-
 .landing-list h1 {
   color: #e4e4e4;
   padding: .25rem 1.5rem 0rem 1.5rem;
@@ -716,6 +711,7 @@ img {
 .michel {
   width: 100%;
   height: 36rem;
+  margin-bottom: -6em;
   background-image: url("../../public/images/michel.jpg");
   background-position: center left 8rem;
   background-repeat: no-repeat;
