--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -25,8 +25,6 @@ main {
 
 .landing-list {
   section {
-    // background-color: red;
-    // transform: translateY(-7rem);
   }
   h1 { 
     color: rgb(228, 228, 228);
@@ -40,7 +38,10 @@ main {
     h2 {
       text-align: left;
     }
-
+    li { 
+      z-index: 5;
+      mix-blend-mode: difference;
+    }
     li a {
       box-shadow: 0 0 1rem black;
       padding: 2rem;
@@ -89,8 +90,11 @@ img {
 .michel {
   width: 100%; 
   height: 36rem;
+  margin-bottom: -5em;
 
-  margin-bottom: -6em;
+  position: sticky;
+  top: 6rem;
+  z-index: 0;
 
   background-image: url('../../public/images/michel.jpg'); 
   background-position: center left 8rem;
