--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -1,8 +1,3 @@
-main {
-  display: grid;
-  row-gap: 1rem;
-}
-
 .landing__banner {
   padding: 2rem;
 
@@ -24,8 +19,11 @@ main {
 /* LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST */
 
 .landing-list {
-  section {
-  }
+  background: var(--bg-pos); 
+  border-radius: .75rem;
+  width: 100%;
+  transform: translateX(.5rem);
+
   h1 { 
     color: rgb(228, 228, 228);
     padding: .25rem 1.5rem 0rem 1.5rem;
@@ -39,11 +37,9 @@ main {
       text-align: left;
     }
     li { 
-      z-index: 5;
-      mix-blend-mode: difference;
+      z-index: 1;
     }
     li a {
-      box-shadow: 0 0 1rem black;
       padding: 2rem;
       width: 100%;
 
@@ -75,11 +71,6 @@ main {
   --bg-pos: left / contain no-repeat; 
 }
 
-.landing-list { 
-  background: var(--bg-pos); 
-  border-radius: .75rem;
-}
-
 /* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES  */
 
 img {
@@ -100,31 +91,4 @@ img {
   background-position: center left 8rem;
   background-repeat: no-repeat; 
   background-size: cover; 
-}
-
-.not-a-link a { 
-  color: #767676; 
-  cursor: not-allowed; 
-}
-
-/* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
-
-@media screen and (min-width: 64rem) {
-  body {
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 8rem 1fr;
-  }
-
-  header {
-    background-color: red;
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
-  }
-
-  main {
-    grid-column: span 2;
-
-    display: grid;
-    grid-template-columns: var(--golden-ratio) 1fr;
-  }
 }
