--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -342,304 +342,6 @@ template {
   display: none;
 }
 
-/* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES */
-.blog__post {
-  padding: 2rem 3rem 2rem 2rem;
-  display: -ms-grid;
-  display: grid;
-  grid-gap: 1rem;
-  -ms-grid-columns: 32rem;
-      grid-template-columns: 32rem;
-  background-color: var(--color-grey);
-}
-
-.blog__post h2 {
-  margin-bottom: 2rem;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1 / 2;
-}
-
-.blog__post img {
-  background-color: var(--color-dark);
-  border: var(--border-size) solid var(--color-dark);
-  margin: 2rem 0 0;
-  -webkit-transform: translateX(-32.5rem);
-          transform: translateX(-32.5rem);
-}
-
-/* DARK MODE DARK MODE DARK MODE DARK MODE DARK MODE DARK MODE DARK MODE */
-button {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 2rem;
-  border: 0.5rem solid var(--color-dark);
-  padding: 1rem;
-  background-color: var(--color-grey);
-  -webkit-box-shadow: 0 4px .5rem #1e1e1e;
-          box-shadow: 0 4px .5rem #1e1e1e;
-  color: var(--color-dark);
-  font-size: var(--base-font-size);
-  -webkit-transition: border-radius var(--speed-slow);
-  transition: border-radius var(--speed-slow);
-}
-
-button:focus, button:hover {
-  border-radius: 1rem;
-  cursor: pointer;
-  -webkit-transition: border-radius var(--speed-fast);
-  transition: border-radius var(--speed-fast);
-}
-
-button:active {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  -webkit-transform: scale(95%);
-          transform: scale(95%);
-}
-
-:root *.dark-mode,
-.dark-mode .blog__post {
-  --color-white: #1e1e1e;
-  --color-blood: #ffb532;
-  --color-dark: #d2d2ce;
-  --color-grey: #1e1e1e;
-  color: var(--color-dark);
-}
-
-:root *.dark-mode .landing__banner,
-:root *.dark-mode .landing-list ul li a,
-:root *.dark-mode .blog__banner, :root *.dark-mode aside,
-.dark-mode .blog__post .landing__banner,
-.dark-mode .blog__post .landing-list ul li a,
-.dark-mode .blog__post .blog__banner,
-.dark-mode .blog__post aside {
-  outline: 1rem solid var(--color-dark);
-}
-
-:root *.dark-mode .landing__banner, :root *.dark-mode .blog__banner,
-.dark-mode .blog__post .landing__banner,
-.dark-mode .blog__post .blog__banner {
-  color: var(--color-dark);
-}
-
-:root *.dark-mode .blog-animation,
-.dark-mode .blog__post .blog-animation {
-  color: #af3333;
-}
-
-/* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
-@media all and (max-width: 1023px) {
-  .blog__post img {
-    width: 100%;
-    -webkit-transform: translateX(0px);
-            transform: translateX(0px);
-  }
-}
-
-@media screen and (max-width: 36rem) {
-  .blog__post {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-  }
-  .blog__post img {
-    -webkit-transform: translateX(0px);
-            transform: translateX(0px);
-    /* max-width: 100%; */
-    background-color: var(--color-blood);
-    border: 3vw solid var(--color-blood);
-  }
-}
-
-main {
-  display: -ms-grid;
-  display: grid;
-  grid-gap: 1rem;
-}
-
-/* BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER */
-.blog__banner {
-  min-height: calc(42vh - 8rem);
-  width: 100%;
-  padding: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background: var(--color-yellow) url("../../public/images/svg/layered-waves-haikei.svg") no-repeat bottom center;
-  background-size: cover;
-  text-align: center;
-}
-
-.blog__banner h3 {
-  margin-top: 2rem;
-}
-
-.blog-animation {
-  font-family: inherit;
-  -webkit-transition: color 5s;
-  transition: color 5s;
-}
-
-.blog-animation:focus, .blog-animation:hover {
-  cursor: crosshair;
-  /* For fun */
-  color: var(--color-dark);
-  -webkit-transition: all var(--speed-fast);
-  transition: all var(--speed-fast);
-}
-
-/* THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS */
-.blog__thumbnails {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  gap: 1rem;
-}
-
-.blog__thumbnails article div {
-  /* Thumbnail Wrapper */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: left;
-      -ms-flex-align: left;
-          align-items: left;
-  background-color: var(--color-blood);
-}
-
-.blog__thumbnails article a {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
-  outline: 1rem solid var(--color-dark);
-  height: 100%;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
-  -webkit-transition: outline var(--speed-slow) ease, -webkit-transform var(--speed-fast) ease-out;
-  transition: outline var(--speed-slow) ease, -webkit-transform var(--speed-fast) ease-out;
-  transition: transform var(--speed-fast) ease-out, outline var(--speed-slow) ease;
-  transition: transform var(--speed-fast) ease-out, outline var(--speed-slow) ease, -webkit-transform var(--speed-fast) ease-out;
-  text-decoration: none;
-}
-
-.blog__thumbnails article a:focus, .blog__thumbnails article a:hover {
-  background-color: var(--color-blood);
-  border-radius: 1rem;
-  -webkit-transform: translateX(2.5rem);
-          transform: translateX(2.5rem);
-  z-index: 1;
-  -webkit-transition: outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
-  transition: outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
-  transition: transform var(--speed-fast) ease-out, outline var(--speed-fast) ease-out;
-  transition: transform var(--speed-fast) ease-out, outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
-}
-
-.blog__thumbnails article img {
-  width: 100%;
-  display: none;
-}
-
-.blog__thumbnails article h2 {
-  padding: 1rem 2rem;
-  color: var(--color-yellow);
-}
-
-.blog__thumbnails article p {
-  /* height: 100%; */
-  margin: 0;
-  padding: 2rem;
-  background-color: var(--color-white);
-}
-
-/* ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE */
-aside {
-  padding: 2rem;
-  -ms-flex-item-align: start;
-      -ms-grid-row-align: start;
-      align-self: start;
-  background-color: var(--color-white);
-}
-
-/* MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES */
-@media screen and (min-width: 30rem) {
-  /* Thumbnails */
-  h2 {
-    font-size: 1.5rem;
-  }
-}
-
-@media screen and (min-width: 40rem) {
-  /* Banner */
-  h1.dragon-text {
-    max-width: 55rem;
-  }
-  .blog__banner {
-    min-height: 32vh;
-  }
-}
-
-@media screen and (min-width: 64rem) {
-  .blog__banner {
-    min-height: calc(100vh - 7.5em);
-  }
-  header {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1 / 3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1 / 2;
-  }
-  main {
-    grid-column: span 2;
-    display: -ms-grid;
-    display: grid;
-    grid-gap: 1rem;
-    -ms-grid-columns: 38.2% 1fr;
-        grid-template-columns: 38.2% 1fr;
-    /* 38.2% = Golden Ratio */
-  }
-  .blog__banner {
-    border-bottom: none;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 4;
-    grid-row: 1 / 5;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    text-align: left;
-  }
-}
-
-main {
-  display: -ms-grid;
-  display: grid;
-  row-gap: 1rem;
-}
-
 .landing__banner {
   padding: 2rem;
   background: var(--color-blood) url(../../public/images/svg/stacked-waves-haikei.svg) no-repeat center center;
@@ -652,6 +354,14 @@ main {
 }
 
 /* LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST */
+.landing-list {
+  background: var(--bg-pos);
+  border-radius: .75rem;
+  width: 100%;
+  -webkit-transform: translateX(0.5rem);
+          transform: translateX(0.5rem);
+}
+
 .landing-list h1 {
   color: #e4e4e4;
   padding: .25rem 1.5rem 0rem 1.5rem;
@@ -668,13 +378,10 @@ main {
 }
 
 .landing-list ul li {
-  z-index: 5;
-  mix-blend-mode: difference;
+  z-index: 1;
 }
 
 .landing-list ul li a {
-  -webkit-box-shadow: 0 0 1rem black;
-          box-shadow: 0 0 1rem black;
   padding: 2rem;
   width: 100%;
   background-color: var(--color-white);
@@ -702,11 +409,6 @@ main {
   --bg-pos: left / contain no-repeat;
 }
 
-.landing-list {
-  background: var(--bg-pos);
-  border-radius: .75rem;
-}
-
 /* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES  */
 img {
   border: 0;
@@ -725,37 +427,6 @@ img {
   background-position: center left 8rem;
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-.not-a-link a {
-  color: #767676;
-  cursor: not-allowed;
-}
-
-/* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
-@media screen and (min-width: 64rem) {
-  body {
-    -ms-grid-columns: 1fr 2fr;
-        grid-template-columns: 1fr 2fr;
-    -ms-grid-rows: 8rem 1fr;
-        grid-template-rows: 8rem 1fr;
-  }
-  header {
-    background-color: red;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1 / 3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1 / 2;
-  }
-  main {
-    grid-column: span 2;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: var(--golden-ratio) 1fr;
-        grid-template-columns: var(--golden-ratio) 1fr;
-  }
 }
 
 /* BANNER */
@@ -877,6 +548,15 @@ body {
 }
 
 #root {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
   background-color: #1e1e1e;
   min-height: 100vh;
   width: 100vw;
@@ -920,6 +600,14 @@ header ul li a {
 header ul li a:focus, header ul li a:hover {
   color: var(--color-dark);
   text-decoration: none;
+}
+
+main {
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
 }
 
 /* FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER */
@@ -1012,12 +700,6 @@ p:first-child {
 }
 
 /* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
-@media screen and (max-width: 40rem) {
-  :root {
-    --base-font-size: 1rem;
-  }
-}
-
 @media screen and (min-width: 64rem) {
   footer {
     height: auto;
