--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,8 +2,6 @@ $font-main: "Roboto", Arial, Helvetica, sans-serif;
 $font-dragon: "UnifrakturMaguntia", "Times New Roman", serif;
 
 @import "_normalize";
-@import "_blog-post-style";
-@import "_blog-style";
 @import "_home-style";
 @import "_svg-style";
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap');
@@ -64,6 +62,9 @@ body {
 // Container added by React App.
 
 #root {
+  display: flex;
+  flex-direction: column;
+  align-content: stretch;
   background-color: #1e1e1e;
   min-height: 100vh;
   width: 100vw;
@@ -108,6 +109,12 @@ header {
       text-decoration: none;
     }
   }
+}
+
+main {
+  width: 100vw;
+  display: flex;
+  height: 100%;
 }
 
 /* FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER */
@@ -184,13 +191,6 @@ p {
 }
 
 /* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
-
-@media screen and (max-width: 40rem) {
-  :root {
-    --base-font-size: 1rem; 
-  }
-}
-
 
 @media screen and (min-width: 64rem) {
 
