--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -356,7 +356,6 @@ template {
 /* LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST */
 .landing-list {
   background: var(--bg-pos);
-  border-radius: .75rem;
   width: 100%;
   -webkit-transform: translateX(0.5rem);
           transform: translateX(0.5rem);
@@ -612,21 +611,15 @@ main {
 
 /* FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER */
 footer {
-  height: 7rem;
+  margin-top: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   z-index: 1;
-  background-color: var(--color-grey);
-  -webkit-box-shadow: 0 4px .5rem #1e1e1e;
-          box-shadow: 0 4px .5rem #1e1e1e;
-  min-width: 16.75rem;
+  background-color: var(--color-dark);
   font-size: var(--h5);
   -webkit-transition: border-radius var(--speed-slow);
   transition: border-radius var(--speed-slow);
@@ -634,8 +627,8 @@ footer {
 
 footer a,
 footer a:visited {
-  padding: 2rem;
-  color: var(--color-dark);
+  padding: 2rem 3rem;
+  color: var(--color-grey);
   text-decoration: none;
 }
 
@@ -700,14 +693,28 @@ p:first-child {
 }
 
 /* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
+@media screen and (max-width: 64rem) {
+  main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 @media screen and (min-width: 64rem) {
   footer {
     height: auto;
     position: fixed;
     bottom: 2rem;
     left: 2rem;
+    background-color: var(--color-white);
     border: 0.5rem solid var(--color-dark);
-    font-size: var(--base-font-size);
+    -webkit-box-shadow: 0 4px .5rem #1e1e1e;
+            box-shadow: 0 4px .5rem #1e1e1e;
   }
   footer:active, footer:hover {
     border-radius: 1rem;
@@ -716,6 +723,7 @@ p:first-child {
   }
   footer a,
   footer a:visited {
+    color: var(--color-dark);
     padding: 1rem;
   }
 }
