--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -20,8 +20,9 @@
 
 .landing-list {
   background: var(--bg-pos); 
-  width: 100%;
+  width: 100vw;
   transform: translateX(.5rem);
+  overflow-x: hidden;
 
   h1 { 
     color: rgb(228, 228, 228);
@@ -83,11 +84,11 @@ img {
   margin-bottom: -5em;
 
   position: sticky;
-  top: 6rem;
-  z-index: 0;
+  transform: scaleX(-1);
+  // z-index: -1;
 
   background-image: url('../../public/images/michel.jpg'); 
-  background-position: center left 8rem;
+  background-position: center left 0rem;
   background-repeat: no-repeat; 
   background-size: cover; 
 }
