--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -194,6 +194,10 @@ p {
     width: 100%;
   }
 
+  .landing__banner {
+    border-bottom: 1rem solid var(--color-dark);
+  }
+
   .michel {
     background-position: center right -12rem;
   }
