--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -346,6 +346,7 @@ template {
   padding: 2rem;
   background: var(--color-blood) url(../../public/images/svg/stacked-waves-haikei.svg) no-repeat center center;
   background-size: cover;
+  border-right: 1rem solid var(--color-dark);
   color: var(--color-white);
 }
 
@@ -357,8 +358,6 @@ template {
 .landing-list {
   background: var(--bg-pos);
   width: 100vw;
-  -webkit-transform: translateX(0.5rem);
-          transform: translateX(0.5rem);
   overflow-x: hidden;
 }
 
@@ -703,6 +702,9 @@ p:first-child {
         -ms-flex-direction: column;
             flex-direction: column;
     width: 100%;
+  }
+  .landing__banner {
+    border-bottom: 1rem solid var(--color-dark);
   }
   .michel {
     background-position: center right -12rem;
