Updated CSS and added second section to main page

--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -1,3 +1,26 @@
+.landing__top {
+  width: 100vw;
+  display: flex;
+  height: 100%;
+}
+
+.landing__second {
+  border-top: 1rem solid var(--color-dark);
+  
+  z-index: 1;
+}
+
+.landing__second div {
+  padding: 2rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  background-color: var(--color-white);
+}
+
 .landing__banner {
   padding: 2rem;
 
