Sandbox document looping through goals JSON.

--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -21,6 +21,10 @@
   background-color: var(--color-white);
 }
 
+.sandbox {
+  background-color: var(--color-white);
+}
+
 .landing__banner {
   padding: 2rem;
 
