--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -54,7 +54,7 @@ body {
   grid-template-rows: auto;
   overflow-x: hidden; /* Prevents scroll bar during animations */
 
-  color: var(--dark-color);
+  color: var(--color-dark);
   font-size: var(--base-font-size);
   line-height: 1.5;
 }
