--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -79,14 +79,16 @@
     li {
       background-color: var(--color-white);
       padding: 2rem;
-      transition: all 5s;
+      transition: 5s;
 
       &:hover {
         border-radius: 1rem;
-        transition: all var(--speed-fast);
+        transition: var(--speed-fast);
 
         h6 {
           background-color: var(--color-white);
+          box-shadow: -0.3rem 0.4rem .01rem rgba(0, 0, 0, 0.15);
+          transition: var(--speed-fast);
         }
       }
 
@@ -99,8 +101,10 @@
         background-color: var(--color-grey);
         border: .2rem solid var(--color-dark);
         border-radius: 0.5rem;
-        box-shadow: -0.3rem 0.4rem .01rem rgba(0, 0, 0, 0.15);
+        box-shadow: 0rem 0rem .01rem rgba(0, 0, 0, 0.15);
         color: black;
+
+        transition: 1s;
       }
 
       &.done {
