--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,6 +3,8 @@ $font-dragon: "UnifrakturMaguntia", "Times New Roman", serif;
 
 @import "_normalize";
 @import "_home-style";
+@import "_blog-style";
+@import "_blog-post-style";
 @import "_svg-style";
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap');
 
