--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -574,6 +574,300 @@ img {
   background-size: cover;
 }
 
+main {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 1rem;
+}
+
+/* BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER */
+.blog__banner {
+  min-height: calc(42vh - 8rem);
+  width: 100%;
+  padding: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: var(--color-yellow) url("../../public/images/svg/layered-waves-haikei.svg") no-repeat bottom center;
+  background-size: cover;
+  text-align: center;
+}
+
+.blog__banner h3 {
+  margin-top: 2rem;
+}
+
+.blog-animation {
+  font-family: inherit;
+  -webkit-transition: color 5s;
+  transition: color 5s;
+}
+
+.blog-animation:focus, .blog-animation:hover {
+  cursor: crosshair;
+  /* For fun */
+  color: var(--color-dark);
+  -webkit-transition: all var(--speed-fast);
+  transition: all var(--speed-fast);
+}
+
+/* THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS */
+.blog__thumbnails {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.blog__thumbnails article div {
+  /* Thumbnail Wrapper */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  background-color: var(--color-blood);
+}
+
+.blog__thumbnails article a {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+  outline: 1rem solid var(--color-dark);
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-transition: outline var(--speed-slow) ease, -webkit-transform var(--speed-fast) ease-out;
+  transition: outline var(--speed-slow) ease, -webkit-transform var(--speed-fast) ease-out;
+  transition: transform var(--speed-fast) ease-out, outline var(--speed-slow) ease;
+  transition: transform var(--speed-fast) ease-out, outline var(--speed-slow) ease, -webkit-transform var(--speed-fast) ease-out;
+  text-decoration: none;
+}
+
+.blog__thumbnails article a:focus, .blog__thumbnails article a:hover {
+  background-color: var(--color-blood);
+  border-radius: 1rem;
+  -webkit-transform: translateX(2.5rem);
+          transform: translateX(2.5rem);
+  z-index: 1;
+  -webkit-transition: outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
+  transition: outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
+  transition: transform var(--speed-fast) ease-out, outline var(--speed-fast) ease-out;
+  transition: transform var(--speed-fast) ease-out, outline var(--speed-fast) ease-out, -webkit-transform var(--speed-fast) ease-out;
+}
+
+.blog__thumbnails article img {
+  width: 100%;
+  display: none;
+}
+
+.blog__thumbnails article h2 {
+  padding: 1rem 2rem;
+  color: var(--color-yellow);
+}
+
+.blog__thumbnails article p {
+  /* height: 100%; */
+  margin: 0;
+  padding: 2rem;
+  background-color: var(--color-white);
+}
+
+/* ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE */
+aside {
+  margin-top: 1rem;
+  padding: 2rem;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+  background-color: var(--color-white);
+}
+
+/* MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES */
+@media screen and (min-width: 30rem) {
+  /* Thumbnails */
+  h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 40rem) {
+  /* Banner */
+  h1.dragon-text {
+    max-width: 55rem;
+  }
+  .blog__banner {
+    border-right: 1rem solid var(--color-dark);
+    min-height: 32vh;
+  }
+}
+
+@media screen and (min-width: 64rem) {
+  .blog__banner {
+    min-height: calc(100vh - 7.5em);
+  }
+  header {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+  }
+  main {
+    grid-column: span 2;
+    display: -ms-grid;
+    display: grid;
+    grid-gap: 1rem;
+    -ms-grid-columns: 38.2% 1fr;
+        grid-template-columns: 38.2% 1fr;
+    /* 38.2% = Golden Ratio */
+  }
+  .blog__banner {
+    border-bottom: none;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 4;
+    grid-row: 1 / 5;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    text-align: left;
+  }
+}
+
+/* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES */
+.blog__post {
+  padding: 2rem 3rem 2rem 2rem;
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 1rem;
+  -ms-grid-columns: 32rem;
+      grid-template-columns: 32rem;
+  background-color: var(--color-grey);
+}
+
+.blog__post h2 {
+  margin-bottom: 2rem;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+}
+
+.blog__post img {
+  background-color: var(--color-dark);
+  border: var(--border-size) solid var(--color-dark);
+  margin: 2rem 0 0;
+  -webkit-transform: translateX(-32.5rem);
+          transform: translateX(-32.5rem);
+}
+
+/* DARK MODE DARK MODE DARK MODE DARK MODE DARK MODE DARK MODE DARK MODE */
+button {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 2rem;
+  border: 0.5rem solid var(--color-dark);
+  padding: 1rem;
+  background-color: var(--color-grey);
+  -webkit-box-shadow: 0 4px .5rem #1e1e1e;
+          box-shadow: 0 4px .5rem #1e1e1e;
+  color: var(--color-dark);
+  font-size: var(--base-font-size);
+  -webkit-transition: border-radius var(--speed-slow);
+  transition: border-radius var(--speed-slow);
+}
+
+button:focus, button:hover {
+  border-radius: 1rem;
+  cursor: pointer;
+  -webkit-transition: border-radius var(--speed-fast);
+  transition: border-radius var(--speed-fast);
+}
+
+button:active {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-transform: scale(95%);
+          transform: scale(95%);
+}
+
+:root *.dark-mode,
+.dark-mode .blog__post {
+  --color-white: #1e1e1e;
+  --color-blood: #ffb532;
+  --color-dark: #d2d2ce;
+  --color-grey: #1e1e1e;
+  color: var(--color-dark);
+}
+
+:root *.dark-mode .landing__banner,
+:root *.dark-mode .landing-list ul li a,
+:root *.dark-mode .blog__banner, :root *.dark-mode aside,
+.dark-mode .blog__post .landing__banner,
+.dark-mode .blog__post .landing-list ul li a,
+.dark-mode .blog__post .blog__banner,
+.dark-mode .blog__post aside {
+  outline: 1rem solid var(--color-dark);
+}
+
+:root *.dark-mode .landing__banner, :root *.dark-mode .blog__banner,
+.dark-mode .blog__post .landing__banner,
+.dark-mode .blog__post .blog__banner {
+  color: var(--color-dark);
+}
+
+:root *.dark-mode .blog-animation,
+.dark-mode .blog__post .blog-animation {
+  color: #af3333;
+}
+
+/* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
+@media all and (max-width: 1023px) {
+  .blog__post img {
+    width: 100%;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@media screen and (max-width: 36rem) {
+  .blog__post {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .blog__post img {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+    /* max-width: 100%; */
+    background-color: var(--color-blood);
+    border: 3vw solid var(--color-blood);
+  }
+}
+
 /* BANNER */
 svg {
   /* height: calc(100vh - 8rem); */
