--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -347,11 +347,11 @@ template {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 1rem;
   height: 100%;
 }
 
 .landing__second {
-  border-top: 1rem solid var(--color-dark);
   z-index: 1;
 }
 
@@ -416,7 +416,6 @@ template {
 
 .goals {
   background-color: var(--color-dark);
-  margin-top: 1rem;
 }
 
 .goals ul {
@@ -485,10 +484,10 @@ template {
 }
 
 .landing__banner {
+  min-width: 33vw;
   padding: 2rem;
   background: var(--color-blood) url(../../public/images/svg/stacked-waves-haikei.svg) no-repeat center center;
   background-size: cover;
-  border-right: 1rem solid var(--color-dark);
   color: var(--color-white);
 }
 
@@ -554,11 +553,6 @@ template {
 }
 
 /* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES  */
-img {
-  border: 0;
-  outline: 0;
-}
-
 .michel {
   width: 100%;
   height: 36rem;
@@ -574,16 +568,9 @@ img {
   background-size: cover;
 }
 
-main {
-  display: -ms-grid;
-  display: grid;
-  grid-gap: 1rem;
-}
-
 /* BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER */
 .blog__banner {
   min-height: calc(42vh - 8rem);
-  width: 100%;
   padding: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -715,8 +702,9 @@ aside {
     max-width: 55rem;
   }
   .blog__banner {
-    border-right: 1rem solid var(--color-dark);
+    min-width: 33vw;
     min-height: 32vh;
+    border-right: 1rem solid var(--color-dark);
   }
 }
 
@@ -762,11 +750,6 @@ aside {
 /* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES */
 .blog__post {
   padding: 2rem 3rem 2rem 2rem;
-  display: -ms-grid;
-  display: grid;
-  grid-gap: 1rem;
-  -ms-grid-columns: 32rem;
-      grid-template-columns: 32rem;
   background-color: var(--color-grey);
 }
 
@@ -781,8 +764,8 @@ aside {
   background-color: var(--color-dark);
   border: var(--border-size) solid var(--color-dark);
   margin: 2rem 0 0;
-  -webkit-transform: translateX(-32.5rem);
-          transform: translateX(-32.5rem);
+  -webkit-transform: translateX(-9rem);
+          transform: translateX(-9rem);
 }
 
 /* DARK MODE DARK MODE DARK MODE DARK MODE DARK MODE DARK MODE DARK MODE */
@@ -834,9 +817,10 @@ button:active {
   outline: 1rem solid var(--color-dark);
 }
 
-:root *.dark-mode .landing__banner, :root *.dark-mode .blog__banner,
+:root *.dark-mode .landing__banner, :root *.dark-mode .blog__banner, :root *.dark-mode h6,
 .dark-mode .blog__post .landing__banner,
-.dark-mode .blog__post .blog__banner {
+.dark-mode .blog__post .blog__banner,
+.dark-mode .blog__post h6 {
   color: var(--color-dark);
 }
 
@@ -851,20 +835,6 @@ button:active {
     width: 100%;
     -webkit-transform: translateX(0px);
             transform: translateX(0px);
-  }
-}
-
-@media screen and (max-width: 36rem) {
-  .blog__post {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-  }
-  .blog__post img {
-    -webkit-transform: translateX(0px);
-            transform: translateX(0px);
-    /* max-width: 100%; */
-    background-color: var(--color-blood);
-    border: 3vw solid var(--color-blood);
   }
 }
 
@@ -1049,6 +1019,7 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  gap: 1rem;
 }
 
 /* FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER */
@@ -1147,9 +1118,6 @@ p:first-child {
         -ms-flex-direction: column;
             flex-direction: column;
     width: 100%;
-  }
-  .landing__banner {
-    border-bottom: 1rem solid var(--color-dark);
   }
   .michel {
     background-position: center right -12rem;
