--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -123,6 +123,7 @@ header {
 main {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
 
 /* FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER */
@@ -201,10 +202,6 @@ p {
     display: flex;
     flex-direction: column;
     width: 100%;
-  }
-
-  .landing__banner {
-    border-bottom: 1rem solid var(--color-dark);
   }
 
   .michel {
